--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
@@ -22,7 +22,7 @@ android {
     }
 }
 kapt {
-    generateStubs = true
+    correctErrorTypes = true
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -45,7 +45,7 @@ dependencies {
     compile "android.arch.persistence.room:rxjava2:1.0.0-rc1"
     kapt 'android.arch.persistence.room:compiler:1.0.0-rc1'
     //rxjava
-    compile "io.reactivex.rxjava2:rxjava:2.1.0"
+    compile "io.reactivex.rxjava2:rxjava:2.1.3"
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
 
     compile 'javax.inject:javax.inject:1'
@@ -62,12 +62,15 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
     //Retrofit
-    compile "com.squareup.retrofit2:retrofit:2.3.0"
-    compile "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
-    compile "com.squareup.retrofit2:converter-gson:2.3.0"
+    compile "com.squareup.retrofit2:retrofit:2.0.0"
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
 
 
+    //Moshi
 
+    compile "com.squareup.retrofit2:converter-moshi:2.2.0"
+    compile "com.squareup.moshi:moshi:1.5.0"
+    compile "com.squareup.moshi:moshi-kotlin:1.5.0"
 
 
 }
