--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions{
+            annotationProcessorOptions {
+                includeCompileClasspath false
+            }
+        }
     }
     buildTypes {
         release {
@@ -25,54 +30,51 @@ kapt {
     correctErrorTypes = true
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.51"
     //noinspection GradleCompatible
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:support-v13:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:support-v13:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    compile 'com.google.android.gms:play-services-plus:11.0.4'
+    implementation 'com.google.android.gms:play-services-plus:11.0.4'
     testCompile 'junit:junit:4.12'
     //room
-    compile 'android.arch.persistence.room:runtime:1.0.0-rc1'
-    compile "android.arch.persistence.room:rxjava2:1.0.0-rc1"
+    implementation 'android.arch.persistence.room:runtime:1.0.0-rc1'
+    implementation "android.arch.persistence.room:rxjava2:1.0.0-rc1"
     kapt 'android.arch.persistence.room:compiler:1.0.0-rc1'
     //rxjava
-    compile "io.reactivex.rxjava2:rxjava:2.1.3"
-    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.1.3"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
 
-    compile 'javax.inject:javax.inject:1'
+    implementation 'javax.inject:javax.inject:1'
 
     //Dagger
-    compile "com.google.dagger:dagger:2.11"
-    compile "com.google.dagger:dagger-android:2.11"
-    compile "com.google.dagger:dagger-android-support:2.11"
+    implementation "com.google.dagger:dagger:2.11"
+    implementation "com.google.dagger:dagger-android:2.11"
+    implementation "com.google.dagger:dagger-android-support:2.11"
     kapt "com.google.dagger:dagger-compiler:2.11"
     kapt "com.google.dagger:dagger-android-processor:2.11"
 
     //stetho
-    compile 'com.facebook.stetho:stetho:1.5.0'
-    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-
-    //Retrofit
-    compile "com.squareup.retrofit2:retrofit:2.0.0"
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
     //Moshi
 
-    compile "com.squareup.retrofit2:converter-moshi:2.2.0"
-    compile "com.squareup.moshi:moshi:1.5.0"
-    compile "com.squareup.moshi:moshi-kotlin:1.5.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.2.0"
+    implementation "com.squareup.moshi:moshi:1.5.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.5.0"
 
-
+//Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.3.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
 }
 repositories {
     mavenCentral()
