--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,9 +66,11 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     //Moshi
 
     implementation "com.squareup.retrofit2:converter-moshi:2.2.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.8.0"
     implementation "com.squareup.moshi:moshi:1.5.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.5.0"
 
