--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main.SecondActivity" />
-        <activity android:name=".main.ThirdActivity" />
+        <activity android:name=".main.WikiSearch.WikiAct" />
+        <activity android:name=".main.ToDo.ToDoActivity" />
     </application>
 
 </manifest>
